turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:26: error: not found: value recue
  recue(50);
  ^HouseMany:27: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
  gauche();
        ^