turtleart.housemany.HouseMany.scala.code
override def run() {
  for(i<- 0 to 3){
  maison();
  baisseCrayon
}
  leveCrayon();
  avance(75);
  droite(90);
  recule(50);
  gauche(90);
  baisseCrayon();
  
  maison();
  
  leveCrayon();
  droite(90);
  recule(200);
  gauche(90);
  baisseCrayon();
  
  maison();
  
  leveCrayon();
  avance(75);
  droite(90);
  recue(50);
  gauche();
  baisseCrayon();
  
  for(i<- 0 to 3){
  maison();
  baisseCrayon
}
  droite(90);
  recule(200);
  avance(75);
  
}

def maison(){
  avance(30);
  droite(30);
  avance(30);
  droite(120);
  avance(30);
  droite(120);
  avance(30);
  droite(180);
  avance(30);
  droite(90);
  avance(30);
  droite(90);
  avance(30);
  droite(180);
  avance(30);
  leveCrayon();
  avance(20);
  gauche(90);
}